Remove deprecation warning. Ref #39